--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pankod/refine-antd": "^4.1.1",
-    "@pankod/refine-cli": "^1.2.0",
-    "@pankod/refine-core": "^3.18.0",
-    "@pankod/refine-inferencer": "^1.2.0",
+    "@pankod/refine-antd": "^4.7.1",
+    "@pankod/refine-cli": "^1.17.0",
+    "@pankod/refine-core": "^3.99.4",
+    "@pankod/refine-inferencer": "^2.4.0",
     "@pankod/refine-react-router-v6": "^3.18.0",
     "@pankod/refine-simple-rest": "^3.18.0",
     "@testing-library/jest-dom": "^5.12.0",
@@ -15,6 +15,7 @@
     "@types/jest": "^26.0.23",
     "@uiw/react-md-editor": "^3.19.5",
     "immutability-helper": "^3.1.1",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
